--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     />
   </head>
   <body>
-    <wrapper>
+    <!-- <wrapper>
       <div class="fixed-menu">
-        <p>Overview</p>
-        <p>Curriculum</p>
-        <p>Instructors</p>
-        <p>FAQs</p>
-        <p>Sign up</p>
+        <a href="#">Overview</a>
+        <a href="#">Curriculum</a>
+        <a href="#">Instructors</a>
+        <a href="#">FAQs</a>
+        <a href="#">Sign up</a>
       </div>
-    </wrapper>
+    </wrapper> -->
     <wrapper>
       <div class="main-Page">
         <img
@@ -225,7 +225,7 @@
       </div>
     </wrapper>
 
-    <wrapper>
+    <!-- <wrapper>
       <div class="fifth-Page">
         <h1>
           Know little bit more <br />
@@ -336,7 +336,7 @@
           </div>
         </div>
       </div>
-    </wrapper>
+    </wrapper> -->
 
     <wrapper>
       <div class="sixth-Page">
