--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     />
   </head>
   <body>
-    <!-- <wrapper>
+    <wrapper>
       <div class="fixed-menu">
         <a href="#">Overview</a>
-        <a href="#">Curriculum</a>
-        <a href="#">Instructors</a>
-        <a href="#">FAQs</a>
-        <a href="#">Sign up</a>
+        <a href="#Curriculum">Curriculum</a>
+        <a href="#instructor">Instructors</a>
+        <a href="#faq">FAQs</a>
+        <a href="#sign-up">Sign up</a>
       </div>
-    </wrapper> -->
+    </wrapper>
     <wrapper>
       <div class="main-Page">
         <img
@@ -87,7 +87,7 @@
     </wrapper>
 
     <wrapper>
-      <div class="fourth-Page">
+      <div class="fourth-Page" id="Curriculum">
         <h1>
           What you will learn <br />
           from this course?
@@ -225,8 +225,8 @@
       </div>
     </wrapper>
 
-    <!-- <wrapper>
-      <div class="fifth-Page">
+    <wrapper>
+      <div class="fifth-Page" id="instructor">
         <h1>
           Know little bit more <br />
           about our instructors
@@ -336,10 +336,10 @@
           </div>
         </div>
       </div>
-    </wrapper> -->
+    </wrapper>
 
     <wrapper>
-      <div class="sixth-Page">
+      <div class="sixth-Page" id="faq">
         <div class="sixth-page-container">
           <h1>Some FAQS here</h1>
           <div class="sixth-page-parent">
@@ -388,7 +388,7 @@
     </wrapper>
 
     <wrapper>
-      <div class="seventh-Page">
+      <div class="seventh-Page" id="sign-up">
         <h1>Sign up now</h1>
         <br />
         <p class="bodytext-seventh">
