--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <wrapper>
+    <!-- <wrapper>
       <div class="fixed-menu">
         <a href="#">Overview</a>
         <a href="#Curriculum">Curriculum</a>
@@ -20,7 +20,7 @@
         <a href="#faq">FAQs</a>
         <a href="#sign-up">Sign up</a>
       </div>
-    </wrapper>
+    </wrapper> -->
     <wrapper>
       <div class="main-Page">
         <img
