--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
           systems, Autolayout mastery to advanced animations. Packed with 90+
           videos. 10+ hours of practical video content.
         </p>
-        <button type="button" class="view-course">View Course</button>
-        <button type="button" class="book-seat">Book your seat</button>
+        <button type="button" class="view-course">
+          <a href="#Curriculum"> View Course</a>
+        </button>
+        <button type="button" class="book-seat">
+          <a href="#sign-up"> Book your seat</a>
+        </button>
         <p class="discount-section">
           <img src="images\01 Online Shopping 1.png" alt="discount" /> Get 40%
           Discount for Dashian & Tihar Offer
@@ -214,7 +218,7 @@
             <br /><br /><br /><br />
             <div class="button-withdiscount">
               <button href="#" type="button" class="signup-btn">
-                sign up now
+               <a href="#sign-up"> sign up now </a>
               </button>
               <p class="course-price">
                 Rs. 2500 <span class="course-week">(2 week)</span>
@@ -259,7 +263,7 @@
               development industry, I enjoyed collaborating with design and tech
               teams.
             </p>
-            <button class="sign-up-section">Signup for course</button>
+            <button class="sign-up-section"><a href="#sign-up">Signup for course</a></button>
           </div>
 
           <div class="row2-ellipse row-ellipse">
@@ -284,7 +288,7 @@
               development industry, I enjoyed collaborating with design and tech
               teams.
             </p>
-            <button class="sign-up-section">Signup for course</button>
+            <button class="sign-up-section"><a href="#sign-up">Signup for course</a></button>
           </div>
           <div class="row3-ellipse row-ellipse">
             <div class="info-section">
@@ -308,7 +312,7 @@
               development industry, I enjoyed collaborating with design and tech
               teams.
             </p>
-            <button class="sign-up-section">Signup for course</button>
+            <button class="sign-up-section"><a href="#sign-up">Signup for course</a></button>
           </div>
           <div class="row4-ellipse row-ellipse">
             <div class="info-section">
@@ -332,7 +336,7 @@
               development industry, I enjoyed collaborating with design and tech
               teams.
             </p>
-            <button class="sign-up-section">Signup for course</button>
+            <button class="sign-up-section"><a href="#sign-up">Signup for course</a></button>
           </div>
         </div>
       </div>
